--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# Enable gracefule shutdown
+server.shutdown=graceful
+# Inclode error message in response
+server.error.include-message=always
+# Allow grace timeout period for 20 seconds
+spring.lifecycle.timeout-per-shutdown-phase=20s
 
+# Spring Boot Actuator
+management.endpoint.health.probes.enabled=true
+
+# Logging
+logging.level.hk.org.ha.kcc=debug
+
+# JWT
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expirationMs=1200000
