Fix the OpenShift deployment to rename JWT_SECERT as JWT_SECRET.

--- a/openshift-stg/kcc-spring-boot-svc.yaml
+++ b/openshift-stg/kcc-spring-boot-svc.yaml
@@ -59,7 +59,7 @@ spec:
                 configMapKeyRef:
                   name: env-config
                   key: spring.profiles.active
-            - name: JWT_SECERT
+            - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
