--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Spring Data JPA
-spring.datasource.url=jdbc:sqlserver://kwhdocker01.corp.ha.org.hk:1433;database=kcc_spring_boot;encrypt=false
+spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kcc_spring_boot;encrypt=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
