1. Update OpenShift deployment of default Project Code for ALS Logging. 2. Update OpenShift deployment for production from replicas 2 to 1.

--- a/openshift-stg/kcc-spring-boot-svc.yaml
+++ b/openshift-stg/kcc-spring-boot-svc.yaml
@@ -75,7 +75,7 @@ spec:
                   name: mssql-db-secret
                   key: mssql.db.password
             - name: ALS_PROJECT_CODE
-              value: SC0
+              value: KCC
             - name: ALS_POD_NAME
               valueFrom:
                 fieldRef:
