1. Update OCP4 deployment steps and YAML files. 2. Upgrade to Spring Boot 2.7.11. 3. Upgrade to MapStruct 1.5.5.Final. 4. Upgrade to Hibernate Jpamodelgen 5.6.15.Final. 5. Upgrade to SpringDoc OpenAPI UI 1.7.0.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,9 +11,9 @@ env:
   APP_NAME: ${{ github.event.repository.name }}
   JFROG_DOCKER_REGISTRY: artifactrepo.server.ha.org.hk:55743
   JFROG_REPO_PATH: int_docker_dev/projects/kcc-non/intranet
-  OC_NAMESPACE: kccnonc-kcc-staging-prd
-  OC_SERVER: https://cldpaasp61-asm.server.ha.org.hk:8443
-  OC_DOCKER_REGISTRY: docker-registry.default.svc:5000
+  OC_NAMESPACE: kccclinical-stag-prd
+  OC_SERVER: https://api.prdcld61.server.ha.org.hk:6443
+  OC_DOCKER_REGISTRY: image-registry.openshift-image-registry.svc:5000
 
 jobs:
   build-artifact:
