--- a/openshift-stg/kcc-spring-boot-svc.yaml
+++ b/openshift-stg/kcc-spring-boot-svc.yaml
@@ -19,10 +19,10 @@ spec:
       volumes:
         - name: log-path
           persistentVolumeClaim:
-            claimName: hostpathcldlog-kccnonckccstagingprd-pvc
+            claimName: hostpathcldlog-kccclinicalstagprd-pvc
       containers:
         - name: kcc-spring-boot-svc
-          image: docker-registry.default.svc:5000/kccnonc-kcc-staging-prd/kcc-spring-boot-svc
+          image: image-registry.openshift-image-registry.svc:5000/kccclinical-stag-prd/kcc-spring-boot-svc
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -116,7 +116,7 @@ spec:
     - port: 8080
       targetPort: 8080
 ---
-apiVersion: v1
+apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: kcc-spring-boot-svc
