--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -10,7 +10,8 @@ env:
   JFROG_DOCKER_REGISTRY: artifactrepo.server.ha.org.hk:55743
   JFROG_REPO_PATH: int_docker/projects/kcc-non/intranet
   OC_NAMESPACE: kccclinical-prd
-  OC_SERVER: https://api.prdcld61.server.ha.org.hk:6443
+  OC_SERVER_PRI: https://api.prdcld61.server.ha.org.hk:6443
+  OC_SERVER_SEC: https://api.prdcld71.server.ha.org.hk:6443
   OC_DOCKER_REGISTRY: image-registry.openshift-image-registry.svc:5000
 
 jobs:
@@ -48,7 +49,7 @@ jobs:
     outputs:
       IMAGE_TAG: ${{ steps.gen-image-tag.outputs.TAG }}
 
-  deploy-openshift-prd:
+  deploy-openshift-prd-pri:
     needs: build-image
     runs-on: [self-hosted]
     env:
@@ -56,7 +57,33 @@ jobs:
     steps:
       - name: Login to Openshift
         run: |
-          oc login --username=${{ secrets.OC_USERNAME }} --password=${{ secrets.OC_PASSWORD }} --server=${{ env.OC_SERVER }}
+          oc login --username=${{ secrets.OC_USERNAME }} --password=${{ secrets.OC_PASSWORD }} --server=${{ env.OC_SERVER_PRI }}
+          oc project ${{env.OC_NAMESPACE}}
+
+      - name: Create JFrog Secret
+        run: oc create secret docker-registry jfrog-secret --docker-server ${{ env.JFROG_DOCKER_REGISTRY }} --docker-username=${{ secrets.JFROG_USERNAME }} --docker-password='${{ secrets.JFROG_PASSWORD }}' --docker-email=${{ secrets.JFROG_EMAIL }} -n ${{env.OC_NAMESPACE}}
+        continue-on-error: true
+
+      - name: Import image from JFrog to OpenShift
+        run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ env.JFROG_DOCKER_REGISTRY }}/${{ env.JFROG_REPO_PATH }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --insecure --confirm --reference-policy=local -n ${{env.OC_NAMESPACE}}
+
+      - name: Create resources from configuration file
+        run: oc apply -f openshift\${{ env.APP_NAME }}.yaml
+
+      - name: Perform rolling update
+        run: |
+          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=${{ env.OC_DOCKER_REGISTRY }}/${{ env.OC_NAMESPACE }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{env.OC_NAMESPACE}}
+          oc rollout status deployment/${{ env.APP_NAME }} -n ${{env.OC_NAMESPACE}}
+
+  deploy-openshift-prd-sec:
+    needs: [build-image, deploy-openshift-prd-pri]
+    runs-on: [self-hosted]
+    env:
+      IMAGE_TAG: ${{ needs.build-image.outputs.IMAGE_TAG }}
+    steps:
+      - name: Login to Openshift
+        run: |
+          oc login --username=${{ secrets.OC_USERNAME }} --password=${{ secrets.OC_PASSWORD }} --server=${{ env.OC_SERVER_SEC }}
           oc project ${{env.OC_NAMESPACE}}
 
       - name: Create JFrog Secret
