--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -78,7 +78,7 @@ jobs:
           oc rollout status deployment/${{ env.APP_NAME }} -n ${{env.OC_NAMESPACE}}
 
   deploy-openshift-stg-sec:
-    needs: [build-image, deploy-openshift-stg-pri]
+    needs: [build-image]
     runs-on: [self-hosted]
     env:
       IMAGE_TAG: ${{ needs.build-image.outputs.IMAGE_TAG }}
