1. Update GitHub Actions workflows with checkout step for deployment job. 2. Update deployment YAML file with add of labels.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -57,6 +57,8 @@ jobs:
     env:
       IMAGE_TAG: ${{ needs.build-image.outputs.IMAGE_TAG }}
     steps:
+      - uses: actions/checkout@v2
+
       - name: Login to Openshift
         run: |
           oc login --username=${{ secrets.OC_USERNAME }} --password=${{ secrets.OC_PASSWORD }} --server=${{ env.OC_SERVER_PRI }}
@@ -83,6 +85,8 @@ jobs:
     env:
       IMAGE_TAG: ${{ needs.build-image.outputs.IMAGE_TAG }}
     steps:
+      - uses: actions/checkout@v2
+
       - name: Login to Openshift
         run: |
           oc login --username=${{ secrets.OC_USERNAME }} --password=${{ secrets.OC_PASSWORD }} --server=${{ env.OC_SERVER_SEC }}
