--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
 version: '3'
 
 services:
-  kcc-spring-boot-svc:
-    container_name: kcc-spring-boot-svc
-    image: kcc-spring-boot-svc
+  kwh-eform-svc:
+    container_name: kwh-eform-svc
+    image: kwh-eform-svc
     restart: unless-stopped
     ports:
       - 30000:8080
     environment:
       TZ: Asia/Hong_Kong
       SPRING_PROFILES_ACTIVE: dev
-      JWT_SECRET: ${JWT_SECRET}
-      DB_USER: ${DB_USER}
-      DB_PASS: ${DB_PASS}
