--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Spring Data JPA
-spring.datasource.url=jdbc:sqlserver://DC7KWHIDB01.corp.ha.org.hk;instanceName=KWHI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false;failoverPartner=DC6KWHIDB01.corp.ha.org.hk\KWHI_DC6_MP1
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+#spring.datasource.url=jdbc:sqlserver://DC7KWHIDB01.corp.ha.org.hk;instanceName=KWHI_DC7_MP1;databaseName=kcc_spring_boot;encrypt=false;failoverPartner=DC6KWHIDB01.corp.ha.org.hk\KWHI_DC6_MP1
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASS}
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=false
