add dummy storage Id from usr

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,7 +1,10 @@
 # Spring Data JPA
-spring.datasource.url=jdbc:h2:mem:kcc_spring_boot;INIT=CREATE SCHEMA IF NOT EXISTS KCC_SPRING_BOOT
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:kwh_its_eform;INIT=CREATE SCHEMA IF NOT EXISTS KCC_SPRING_BOOT
+spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kwh_its_eform;encrypt=false
+#spring.datasource.username=sa
+spring.datasource.username=${DB_USER}
+#spring.datasource.password=
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
