--- a/openshift-dev/kwh-its-eform-svc.yaml
+++ b/openshift-dev/kwh-its-eform-svc.yaml
@@ -36,6 +36,24 @@ spec:
             requests:
               cpu: 50m
               memory: 600Mi
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 90
+            periodSeconds: 5
+            timeoutSeconds: 2
+            failureThreshold: 3
+            successThreshold: 1
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 90
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 3
+            successThreshold: 1
           env:
             - name: TZ
               value: Asia/Hong_Kong
