--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,13 @@
 # Spring Data JPA
+#spring.datasource.url=jdbc:sqlserver://mssql;database=kwh_its;encrypt=false
 spring.datasource.url=jdbc:sqlserver://DC8OLMHDB02.corp.ha.org.hk;instanceName=OLMH_DC8_MP2;database=kwh_its;encrypt=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+
+#spring.datasource.url=jdbc:sqlserver://<server-name>.database.windows.net:1433;database=kwh_its;user=<username>;password=<password>
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
