--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>hk.org.ha.kcc</groupId>
-	<artifactId>kwh-its-eform-svc</artifactId>
+	<artifactId>kwh-its-menu-svc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kwh-its-eform-svc</name>
+	<name>kwh-its-menu-svc</name>
 	<description>KCC Spring Boot Service</description>
 	<properties>
 		<java.version>11</java.version>
