--- a/openshift-stg/kwh-its-data-svc.yaml
+++ b/openshift-stg/kwh-its-data-svc.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kwh-its-eform-svc
+  name: kwh-its-data-svc
   labels:
-    app: kwh-its-eform-svc
+    app: kwh-its-data-svc
     app.kubernetes.io/name: spring-boot
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: kwh-its-eform
@@ -11,21 +11,21 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kwh-its-eform-svc
+      app: kwh-its-data-svc
   template:
     metadata:
       labels:
-        app: kwh-its-eform-svc
+        app: kwh-its-data-svc
     spec:
       nodeSelector:
         ha-logtype: hostpathlogging
       volumes:
         - name: log-path
           persistentVolumeClaim:
-            claimName: hostpathcldlog-kccclinicalprd-pvc
+            claimName: hostpathcldlog-kccclinicalstagprd-pvc
       containers:
-        - name: kwh-its-eform-svc
-          image: image-registry.openshift-image-registry.svc:5000/kccclinical-prd/kwh-its-eform-svc
+        - name: kwh-its-data-svc
+          image: image-registry.openshift-image-registry.svc:5000/kccclinical-stg-prd/kwh-its-data-svc
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -96,11 +96,11 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: kwh-its-eform-svc
+  name: kwh-its-data-svc
 spec:
   scaleTargetRef:
     kind: Deployment
-    name: kwh-its-eform-svc
+    name: kwh-its-data-svc
     apiVersion: apps/v1
   minReplicas: 1
   maxReplicas: 3
@@ -121,10 +121,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: kwh-its-eform-svc
+  name: kwh-its-data-svc
 spec:
   selector:
-    app: kwh-its-eform-svc
+    app: kwh-its-data-svc
   ports:
     - port: 8080
       targetPort: 8080
@@ -132,9 +132,9 @@ spec:
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: kwh-its-eform-svc
+  name: kwh-its-data-svc
 spec:
   port:
     targetPort: 8080
   to:
-    name: kwh-its-eform-svc
+    name: kwh-its-data-svc
