--- a/.github/workflows/.development-workflow.yml
+++ b/.github/workflows/.development-workflow.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   build-artifact:
     name: Build artifact
-    runs-on: [michael]
+    runs-on: [self-hosted]
     env:
       MAVEN_CONFIG: ${{ secrets.MAVEN_CONFIG }}
     steps:
@@ -30,7 +30,7 @@ jobs:
   build-container:
     name: Build container
     needs: build-artifact
-    runs-on: [michael]
+    runs-on: [self-hosted]
     steps:
       - name: Generate image tag
         run: echo "IMAGE_TAG=$(Get-Date -Format "yy.M.d.Hmm")" >> $env:GITHUB_ENV
@@ -49,7 +49,7 @@ jobs:
   deploy-dev-c1:
     name: Deploy (Development primary)
     needs: build-container
-    runs-on: [michael]
+    runs-on: [self-hosted]
     env:
       IMAGE_TAG: ${{ needs.build-container.outputs.IMAGE_TAG }}
     steps:
