--- a/.github/workflows/.development-workflow.yml
+++ b/.github/workflows/.development-workflow.yml
@@ -67,10 +67,11 @@ jobs:
       - name: Import image from JFrog to OpenShift
         run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}/${{ vars.ARTIFACTORY_REPO_PATH_DEV }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --confirm --reference-policy=local -n ${{ vars.NAMESPACE_DEV }}
 
+      - name: Update image tag in configuration file
+        run: (Get-Content openshift-dev\${{ env.APP_NAME }}.yaml) -replace '/${{ env.APP_NAME }}', '/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}' | Set-Content openshift-dev\${{ env.APP_NAME }}.yaml
+
       - name: Create resources from configuration file
         run: oc apply -f openshift-dev\${{ env.APP_NAME }}.yaml
 
-      - name: Perform rolling update
-        run: |
-          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=image-registry.openshift-image-registry.svc:5000/${{ vars.NAMESPACE_DEV }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{ vars.NAMESPACE_DEV }}
-          oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_DEV }}
+      - name: Check Rollout Status
+        run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_DEV }}
