--- a/.github/workflows/.production-workflow.yml
+++ b/.github/workflows/.production-workflow.yml
@@ -59,20 +59,21 @@ jobs:
           oc login --token=${{ secrets.ECP_SA_TOKEN_PRD_C1 }} --server=${{ vars.CLUSTER_URL_PRD_C1 }}
           oc project ${{ vars.NAMESPACE_PRD }}
 
-      - name: Create JFrog Secret
-        run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_PRD }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_PRD }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_PRD }} -n ${{ vars.NAMESPACE_PRD }}
-        continue-on-error: true
+      # - name: Create JFrog Secret
+      #   run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_PRD }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_PRD }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_PRD }} -n ${{ vars.NAMESPACE_PRD }}
+      #   continue-on-error: true
 
       - name: Import image from JFrog to OpenShift
         run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}/${{ vars.ARTIFACTORY_REPO_PATH_PRD }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --confirm --reference-policy=local -n ${{ vars.NAMESPACE_PRD }}
 
-      - name: Create resources from configuration file
+      - name: Update image tag in YAML configuration file
+        run: (Get-Content openshift\${{ env.APP_NAME }}.yaml) -replace '/${{ env.APP_NAME }}', '/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}' | Set-Content openshift\${{ env.APP_NAME }}.yaml
+
+      - name: Create resources from YAML configuration file
         run: oc apply -f openshift\${{ env.APP_NAME }}.yaml
 
-      - name: Perform rolling update
-        run: |
-          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=image-registry.openshift-image-registry.svc:5000/${{ vars.NAMESPACE_PRD }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{ vars.NAMESPACE_PRD }}
-          oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_PRD }}
+      - name: Check Rollout Status
+        run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_PRD }}
 
   deploy-prd-c2:
     name: Deploy (Production secondary)
@@ -88,17 +89,18 @@ jobs:
           oc login --token=${{ secrets.ECP_SA_TOKEN_PRD_C2 }} --server=${{ vars.CLUSTER_URL_PRD_C2 }}
           oc project ${{ vars.NAMESPACE_PRD }}
 
-      - name: Create JFrog Secret
-        run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_PRD }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_PRD }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_PRD }} -n ${ vars.NAMESPACE_PRD }}
-        continue-on-error: true
+      # - name: Create JFrog Secret
+      #   run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_PRD }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_PRD }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_PRD }} -n ${ vars.NAMESPACE_PRD }}
+      #   continue-on-error: true
 
       - name: Import image from JFrog to OpenShift
         run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}/${{ vars.ARTIFACTORY_REPO_PATH_PRD }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --confirm --reference-policy=local -n ${{ vars.NAMESPACE_PRD }}
 
-      - name: Create resources from configuration file
+      - name: Update image tag in YAML configuration file
+        run: (Get-Content openshift\${{ env.APP_NAME }}.yaml) -replace '/${{ env.APP_NAME }}', '/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}' | Set-Content openshift\${{ env.APP_NAME }}.yaml
+
+      - name: Create resources from YAML configuration file
         run: oc apply -f openshift\${{ env.APP_NAME }}.yaml
 
-      - name: Perform rolling update
-        run: |
-          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=image-registry.openshift-image-registry.svc:5000/${{ vars.NAMESPACE_PRD }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{ vars.NAMESPACE_PRD }}
-          oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_PRD }}
+      - name: Check Rollout Status
+        run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_PRD }}
