--- a/.github/workflows/.staging-workflow.yml
+++ b/.github/workflows/.staging-workflow.yml
@@ -60,20 +60,21 @@ jobs:
           oc login --token=${{ secrets.ECP_SA_TOKEN_STG_C1 }} --server=${{ vars.CLUSTER_URL_STG_C1 }}
           oc project ${{ vars.NAMESPACE_STG }}
 
-      - name: Create JFrog Secret
-        run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_STG }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_STG }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_STG }} -n ${{ vars.NAMESPACE_STG }}
-        continue-on-error: true
+      # - name: Create JFrog Secret
+      #   run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_STG }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_STG }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_STG }} -n ${{ vars.NAMESPACE_STG }}
+      #   continue-on-error: true
 
       - name: Import image from JFrog to OpenShift
         run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}/${{ vars.ARTIFACTORY_REPO_PATH_STG }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --confirm --reference-policy=local -n ${{ vars.NAMESPACE_STG }}
 
-      - name: Create resources from configuration file
+      - name: Update image tag in YAML configuration file
+        run: (Get-Content openshift\${{ env.APP_NAME }}.yaml) -replace '/${{ env.APP_NAME }}', '/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}' | Set-Content openshift\${{ env.APP_NAME }}.yaml
+
+      - name: Create resources from YAML configuration file
         run: oc apply -f openshift-stg\${{ env.APP_NAME }}.yaml
 
-      - name: Perform rolling update
-        run: |
-          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=image-registry.openshift-image-registry.svc:5000/${{ vars.NAMESPACE_STG }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{ vars.NAMESPACE_STG }}
-          oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_STG }}
+      - name: Check Rollout Status
+        run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_STG }}
 
   deploy-stg-c2:
     name: Deploy (Staging secondary)
@@ -89,17 +90,18 @@ jobs:
           oc login --token=${{ secrets.ECP_SA_TOKEN_STG_C2 }} --server=${{ vars.CLUSTER_URL_STG_C2 }}
           oc project ${{ vars.NAMESPACE_STG }}
 
-      - name: Create JFrog Secret
-        run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_STG }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_STG }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_STG }} -n ${ vars.NAMESPACE_STG }}
-        continue-on-error: true
+      # - name: Create JFrog Secret
+      #   run: oc create secret docker-registry jfrog-secret --docker-server ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }} --docker-username=${{ secrets.ARTIFACTORY_USER_STG }} --docker-password='${{ secrets.ARTIFACTORY_PASSWORD_STG }}' --docker-email=${{ secrets.ARTIFACTORY_EMAIL_STG }} -n ${ vars.NAMESPACE_STG }}
+      #   continue-on-error: true
 
       - name: Import image from JFrog to OpenShift
         run: oc import-image ${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --from ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}/${{ vars.ARTIFACTORY_REPO_PATH_STG }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} --confirm --reference-policy=local -n ${{ vars.NAMESPACE_STG }}
 
-      - name: Create resources from configuration file
+      - name: Update image tag in YAML configuration file
+        run: (Get-Content openshift\${{ env.APP_NAME }}.yaml) -replace '/${{ env.APP_NAME }}', '/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }}' | Set-Content openshift\${{ env.APP_NAME }}.yaml
+
+      - name: Create resources from YAML configuration file
         run: oc apply -f openshift-stg\${{ env.APP_NAME }}.yaml
 
-      - name: Perform rolling update
-        run: |
-          oc set image deployment ${{ env.APP_NAME }} ${{ env.APP_NAME }}=image-registry.openshift-image-registry.svc:5000/${{ vars.NAMESPACE_STG }}/${{ env.APP_NAME }}:${{ env.IMAGE_TAG }} -n ${{ vars.NAMESPACE_STG }}
-          oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_STG }}
+      - name: Check Rollout Status
+        run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_STG }}
