--- a/.github/workflows/.staging-workflow.yml
+++ b/.github/workflows/.staging-workflow.yml
@@ -47,7 +47,7 @@ jobs:
       IMAGE_TAG: ${{ env.IMAGE_TAG }}
 
   deploy-stg-c1:
-    name: Deploy (Staging primary)
+    name: Deploy (STG primary)
     needs: build-container
     runs-on: [self-hosted]
     env:
@@ -77,7 +77,7 @@ jobs:
         run: oc rollout status deployment/${{ env.APP_NAME }} -n ${{ vars.NAMESPACE_STG }}
 
   deploy-stg-c2:
-    name: Deploy (Staging secondary)
+    name: Deploy (STG secondary)
     needs: [build-container]
     runs-on: [self-hosted]
     env:
