Remove get runner name (only work for label).

--- a/.github/workflows/.development-workflow.yml
+++ b/.github/workflows/.development-workflow.yml
@@ -17,8 +17,6 @@ jobs:
     env:
       MAVEN_CONFIG: ${{ secrets.MAVEN_CONFIG }}
     steps:
-      - run: echo "selected runner = ${{ runner.name }}"
-
       - uses: actions/checkout@v3
 
       - name: Create Maven configuration file
@@ -28,13 +26,11 @@ jobs:
 
       - name: Build source with Maven
         run: mvn clean install
-    outputs:
-      RUNNER: ${{ runner.name }}
 
   build-container:
     name: Build container
     needs: build-artifact
-    runs-on: ${{needs.build-artifact.outputs.RUNNER}}
+    runs-on: [self-hosted]
     steps:
       - name: Generate image tag
         run: echo "IMAGE_TAG=$(Get-Date -Format "yy.M.d.Hmm")" >> $env:GITHUB_ENV
