--- a/openshift-dev/kwh-its-data-svc.yaml
+++ b/openshift-dev/kwh-its-data-svc.yaml
@@ -6,7 +6,7 @@ metadata:
     app: kwh-its-data-svc
     app.kubernetes.io/name: spring-boot
     app.kubernetes.io/component: backend
-    app.kubernetes.io/part-of: kwh-its-eform
+    app.kubernetes.io/part-of: kwh-its
 spec:
   replicas: 1
   selector:
